--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,24 +26,29 @@ android {
         //从目录更明显地区分Kotlin文件和Java文件
         //1.By default, new Kotlin files are saved into src/main/java/.
         //2.you can put Kotlin files under src/main/kotlin/ instead.
-        main.java.srcDirs += 'src/main/kotlin'
-        test.java.srcDirs += 'src/test/kotlin'
-        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+//        main.java.srcDirs += 'src/main/kotlin'
+//        test.java.srcDirs += 'src/test/kotlin'
+//        androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.0.2'
-    implementation 'com.android.support:design:26.0.2'
-    implementation 'com.android.support:cardview-v7:26.0.2'
-    implementation 'com.android.support:support-v4:26.0.2'
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:support-v4:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
-    
+
+    compile "org.jetbrains.anko:anko-common:$anko_version"
+//    compile "org.jetbrains.anko:anko-sqlite:$anko_version"
+//    compile "org.jetbrains.anko:anko-coroutines:$anko_version"
+
+
 }
