AppBarLayout、TabLayout、ViewPager、RecyclerView结合使用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.FragmentActivity" />
-        <activity android:name=".activity.SharedPreferencesActivity"></activity>
+        <activity android:name=".activity.SharedPreferencesActivity" />
+        <activity android:name=".activity.TabLayoutActivity"></activity>
     </application>
 
 </manifest>
