RecyclerView 瀑布流布局OffsetDecoration，Item之间的间隔、Toolbar menu 创建的2种方式、fitsSystemWindows应用、

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <activity android:name=".activity.FragmentActivity" />
         <activity android:name=".activity.SharedPreferencesActivity" />
         <activity android:name=".activity.TabLayoutActivity" />
-        <activity android:name=".activity.ToolbarActivity"></activity>
+        <activity
+            android:name=".activity.ToolbarActivity"
+            android:theme="@style/AppThemeStatusBar" />
     </application>
 
 </manifest>
