--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:label="@string/title_activity_navigation_drawer"
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.DrawerLayoutActivity" />
-        <activity android:name=".activity.SlidingPaneLayoutActivity"></activity>
+        <activity android:name=".activity.SlidingPaneLayoutActivity" />
+        <activity android:name=".activity.SwipeRefreshLayoutActivity"></activity>
     </application>
 
 </manifest>
