AppBarLayout+TabLayout+ViewPager+FragmentPagerAdapter，ViewPager保存页面活动数量，但会消耗更多内存，按实际来设置

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.DrawerLayoutActivity" />
         <activity android:name=".activity.SlidingPaneLayoutActivity" />
-        <activity android:name=".activity.SwipeRefreshLayoutActivity"></activity>
+        <activity android:name=".activity.SwipeRefreshLayoutActivity" />
+        <activity android:name=".activity.TabLayoutActivity2"></activity>
     </application>
 
 </manifest>
