--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true//低版本使用需要配置此项，引入过矢量绘图支持在构建时生成PNG图像
     }
     buildTypes {
         release {
@@ -57,6 +58,11 @@ dependencies {
 //    Anko SQLite: a query DSL and parser collection for Android SQLite;
     compile "org.jetbrains.anko:anko-sqlite:$anko_version"
 //    Anko Coroutines: utilities based on the kotlinx.coroutines library.
+
+
+
+
+    compile 'com.zhy:autolayout:1.4.5'
 
 
 }
