--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="design_width"
+            android:value="1080" />
+        <meta-data
+            android:name="design_height"
+            android:value="1920" />
+
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +37,10 @@
         <activity android:name=".activity.DrawerLayoutActivity" />
         <activity android:name=".activity.SlidingPaneLayoutActivity" />
         <activity android:name=".activity.SwipeRefreshLayoutActivity" />
-        <activity android:name=".activity.TabLayoutActivity2"></activity>
+        <activity android:name=".activity.TabLayoutActivity2" />
+        <activity
+            android:name=".activity.ToolbarActivity2"
+            android:theme="@style/AppThemeStatusBar" />
     </application>
 
 </manifest>
