--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="com.example.aaron.androiddesign_kotlin">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="design_width"
             android:value="1080" />
@@ -41,6 +41,7 @@
         <activity
             android:name=".activity.ToolbarActivity2"
             android:theme="@style/AppThemeStatusBar" />
+        <activity android:name=".activity.AnkoExampleActivity"></activity>
     </application>
 
 </manifest>
