ViewPager+FragmentPagerAdapter，启动页面，滚动效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,10 @@
         <activity
             android:name=".activity.ToolbarActivity2"
             android:theme="@style/AppThemeStatusBar" />
-        <activity android:name=".activity.AnkoExampleActivity"></activity>
+        <activity android:name=".activity.AnkoExampleActivity" />
+        <activity
+            android:name=".activity.PagerActivity"
+            android:theme="@style/AppThemeStatusBar" />
     </application>
 
 </manifest>
