--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity
             android:name=".activity.PagerActivity"
             android:theme="@style/AppThemeStatusBar" />
+        <activity android:name=".activity.SettingActivity" />
+        <activity android:name=".activity.SettingActivity2"/>
     </application>
 
 </manifest>
