1.Animations动画使用 2.ViewPager屏幕幻灯片，page切换动画（DepthPageTransformer、ZoomOutPageTransformer）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,11 @@
             android:name=".activity.PagerActivity"
             android:theme="@style/AppThemeStatusBar" />
         <activity android:name=".activity.SettingActivity" />
-        <activity android:name=".activity.SettingActivity2"/>
+        <activity android:name=".activity.SettingActivity2" />
+        <activity android:name=".activity.AnimationsActivity" />
+        <activity
+            android:name=".activity.ViewPagerSlidesActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
